fixed white bar from div overflow

--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,8 @@
 body, html{
   height: 100%;
   /*width:100%;*/
-  margin: 0;
+  margin:0px;
+  padding:0px;
   font-family: 'Gamja Flower';
   color: white;
   text-align: center;
@@ -116,6 +117,7 @@ img.clickable:hover {
 
 .link-icons {
   width: 33%;
+  height:33%;
   padding: 10%;
 }
 /*////////////////////////////////////////////////////*/
@@ -154,6 +156,7 @@ img.clickable:hover {
 }
 .interest-icons {
   width: 20%;
+  height:20%;
 }
 
 /*////////////////////////////////////////////////////*/
